# complex-vis

./: .gitignore  Cargo.toml  TODO.md
src/: canvas.rs  color.rs  colors.rs  complex.rs  decimal_math.rs  draw_function.wgsl  drawables.rs  gpu.rs  gpu_canvas.rs  gpu_renderer.rs  gpucanvas_2d.rs  gpuview.rs  graph.rs  graph2d.rs  graph2dsdf.rs  graphing.rs  main.rs  math.rs  multiview.wgsl  quaternion.rs  sdf.rs  shader.wgsl  tmp.rs  vector.rs
