[package]
name = "complex-vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
complex-stuff = "1.0.0"
# drawing-stuff = { git = "https://github.com/jon5th5n/drawing-stuff.git" }
drawing-stuff = { path = "../drawing-stuff/" }
minifb = "0.25.0"

wgpu = "0.19.1"
pollster = "0.3.0"
bytemuck = { version = "1.14.3", features = ["derive"] }
futures-intrusive = "0.5.0"
backtrace-on-stack-overflow = "0.3.0"

[profile.release]
debug = true
