[package]
name = "complex-vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
complex-stuff = "1.0.0"
drawing-stuff = { path = "../drawing-stuff/" }
# drawing-stuff = { git = "https://github.com/jon5th5n/drawing-stuff.git" }

winit = "0.29.15"
env_logger = "0.11.3"
log = "0.4"
wgpu = "0.19.4"
pollster = "0.3.0"
bytemuck = { version = "1.12", features = ["derive"] }
anyhow = "1.0"

[profile.release]
debug = true
