[package]
name = "complex-vis"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.83"
bytemuck = { version = "1.15.0", features = ["derive"] }
env_logger = "0.11.3"
fraction = "0.15.3"
pollster = "0.4.0"
wgpu = "23.0.1"
wgpu_text = "0.9.1"
winit = "0.30.0"
